# deepseek_cpp_infer

./: .gitignore  .gitmodules  AGENTS.md  MEMORY.md  TOOLS.md  USER.md
.github/workflows/: _gpu-benchmark-run.yml  ci.yml  gpu-benchmark.yml  nightly-benchmark.yml
.openclaw/: workspace-state.json
deepseek_cpp_infer/: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  PROGRESS.md  README.md  TODO.md
deepseek_cpp_infer/docker/: benchmark.Dockerfile
deepseek_cpp_infer/docs/: deepseek_v2_lite_architecture.md  gpu_benchmark_ci.md  gpu_phase1_retrospective.md  implementation_plan.md  remote_startup.md  runtime_design.md
deepseek_cpp_infer/include/ds/core/: attention.h  dtype.h  kv_cache.h  math.h  mha.h  ops.h  rope.h  sampler.h  tensor.h
deepseek_cpp_infer/include/ds/hf/: config.h  decode.h  model_loader.h  safetensors.h  weight_ops.h  weights_index.h
deepseek_cpp_infer/include/ds/models/core/: registry.h
deepseek_cpp_infer/include/ds/models/deepseek/: config.h  cuda_backend.h  cuda_kernels.h  mla.h  model.h  ops.h  package.h  weights.h
deepseek_cpp_infer/include/ds/runtime/: backend.h  cuda_backend.h  cuda_kernels.h  deepseek_model.h  mla.h  model.h  model_executor.h  model_factory.h  ops.h  tokenizer.h  weights.h
deepseek_cpp_infer/include/ds/util/: fs.h  json.h  mmap.h  path.h
deepseek_cpp_infer/scripts/bench/: collect_report.py  run_real_benchmark.py  run_suite.sh
deepseek_cpp_infer/scripts/gcp/: gpu_benchmark_startup.sh
deepseek_cpp_infer/src/: main.cpp
deepseek_cpp_infer/src/core/: attention.cpp  dtype.cpp  kv_cache.cpp  math.cpp  ops.cpp  rope.cpp  sampler.cpp  tensor.cpp
deepseek_cpp_infer/src/hf/: config.cpp  decode.cpp  model_loader.cpp  safetensors.cpp  weight_ops.cpp  weights_index.cpp
deepseek_cpp_infer/src/models/core/: registry.cpp
deepseek_cpp_infer/src/models/deepseek/: config.cpp  cuda_backend.cpp  mla.cpp  model.cpp  ops.cpp  package.cpp  weights.cpp
deepseek_cpp_infer/src/ops/core/: mha.cpp
deepseek_cpp_infer/src/ops/cuda/: attention_kernels.cu  elementwise_kernels.cu  routing_kernels.cu
deepseek_cpp_infer/src/ops/runtime/: ops.cpp
deepseek_cpp_infer/src/runtime/: backend.cpp  cuda_backend.cpp  deepseek_model.cpp  mla.cpp  model.cpp  model_executor.cpp  model_factory.cpp  ops.cpp  tokenizer.cpp  weights.cpp
deepseek_cpp_infer/src/util/: fs.cpp  json.cpp  mmap.cpp  path.cpp
deepseek_cpp_infer/tests/: cuda_runtime_smoke.cpp  run_e2e_cli.py  runtime_smoke.cpp
deepseek_cpp_infer/tools/: bootstrap_run.sh  install_deps_ubuntu.sh  make_mock_deepseek_model.py
deepseek_triton_infer/: README.md  pyproject.toml
deepseek_triton_infer/src/ds_infer/: __init__.py
memory/: 2026-03-08.md
